This change log contains only changes relevant to the KDM configuration,
startup and packaging. Bug fixes are not listed, and feature changes only
if they affect the configuration.

2005-01-31  Oswald Buddenhagen <ossi@kde.org>

	* Added console mode that is suitable for systems with VTs (Linux).
	  Option ConsoleTTYs. The @tty spec in Xservers is irrelevant on
	  those systems now.

2005-01-23  Oswald Buddenhagen <ossi@kde.org>

	* Added Grub support to boot options. Option UseLilo replaced
	  with BootManager { None, Grub, Lilo }. Removed options LiloCmd
	  and LiloMap.

2005-01-09  Oswald Buddenhagen <ossi@kde.org>

	* Merged sessreg into kdm. Option UseSessReg.

2004-08-14  Oswald Buddenhagen <ossi@kde.org>

	* Replaced dysfunct InteractiveSd with working
	  ScheduledSd { Never, Optional, Always }

2004-07-28  Oswald Buddenhagen <ossi@kde.org>

	* Added control sockets. Control FiFos are now obsolete.
	  Added control socket command line client 'kdmctl'.
	* The Setup program is now run even for automatic logins.
	  Setup, Startup and Reset have the arg "auto" for automatic logins.

2004-07-23  Oswald Buddenhagen <ossi@kde.org>

	* Dynamic VT allocation added; option ServerVTs; no need to specify
	  vtX in Xservers any more.

2004-07-10  Oswald Buddenhagen <ossi@kde.org>

	* GreeterPosX, GreeterPosY and GreeterPosFixed replaced with
	  single GreeterPos which is a pair of relative coordinates

2004-07-01  Oswald Buddenhagen <ossi@kde.org>

	* The greeter can now run a "session preloader"; option Preloader

2004-04-15  Oswald Buddenhagen <ossi@kde.org>

	* Merge from XDM:
	  - IPv6 support
	  - LISTEN keyword in Xaccess
	  - Changes to Enable and Port in [Xdmcp] now take effect when HUPed
	  - Support for EGD/PRNGD; options PrngdPort and PrngdSocket

2004-04-14  Oswald Buddenhagen <ossi@kde.org>

	* -debug now groks additional bits for stracing and valgrinding
	  helper processes and disabling syslog usage.

2004-04-09  Oswald Buddenhagen <ossi@kde.org>
